traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {

  var cpt=0
  ecritMessage(cpt)
  x=0
  y=diag
  while (y!=getMondeHauteur()-1){
    diag=diag+1

    while (y!=0) {
      setPos(x,y)
      cpt=cpt+1
      ecritMessage(cpt)
      x=x+1
      y=y-1}


  }
}